OpenJMLTest/test/gitbug450/expected
test/gitbug450/ArrList.java:15: error: incompatible types: int cannot be converted to String
        theList.add(a);
                    ^
Operation not performed because of parse or type errors
1 error
